--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
   "bugs": {
     "url": "https://github.com/karinamzalez/spiral-matrix/issues"
   },
-  "homepage": "https://github.com/karinamzalez/spiral-matrix#readme"
+  "homepage": "https://github.com/karinamzalez/spiral-matrix#readme",
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "mocha": "^3.5.0"
+  }
 }
