--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "spiral-matrix-- coding challenge for crownpeak",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
