--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/karinamzalez/spiral-matrix#readme",
   "devDependencies": {
     "chai": "^4.1.2",
+    "mathjs": "^3.16.3",
     "mocha": "^3.5.0"
   }
 }
